bug: Fix stream resource management